fix(bug): 增加支付宝支付功能

--- a/mygo/mygo-web/src/main/resources/config.properties
+++ b/mygo/mygo-web/src/main/resources/config.properties
@@ -1,4 +1,20 @@
-#ben di
+#upload file config
 upload.file.path.prefix=${upload.prefix}
 request.file.path.prefix=${request.prefix}
 
+#alipay config
+alipay.appid = ${ali.appid}
+#\u5546\u6237\u79C1\u94A5\uFF0C\u60A8\u7684PKCS8\u683C\u5F0FRSA2\u79C1\u94A5
+alipay.private.key =${ali.private.key}
+#\u652F\u4ED8\u5B9D\u516C\u94A5,\u67E5\u770B\u5730\u5740\uFF1A https://openhome.alipay.com/platform/keyManage.htm \u5BF9\u5E94APPID\u4E0B\u7684\u652F\u4ED8\u5B9D\u516C\u94A5\u3002
+alipay.public.key = ${ali.public.key}
+#\u670D\u52A1\u5668\u5F02\u6B65\u901A\u77E5\u9875\u9762\u8DEF\u5F84  \u9700http://\u683C\u5F0F\u7684\u5B8C\u6574\u8DEF\u5F84\uFF0C\u4E0D\u80FD\u52A0?id=123\u8FD9\u7C7B\u81EA\u5B9A\u4E49\u53C2\u6570\uFF0C\u5FC5\u987B\u5916\u7F51\u53EF\u4EE5\u6B63\u5E38\u8BBF\u95EE
+alipay.notify.url = ${ali.notify.url}
+#\u9875\u9762\u8DF3\u8F6C\u540C\u6B65\u901A\u77E5\u9875\u9762\u8DEF\u5F84 \u9700http://\u683C\u5F0F\u7684\u5B8C\u6574\u8DEF\u5F84\uFF0C\u4E0D\u80FD\u52A0?id=123\u8FD9\u7C7B\u81EA\u5B9A\u4E49\u53C2\u6570\uFF0C\u5FC5\u987B\u5916\u7F51\u53EF\u4EE5\u6B63\u5E38\u8BBF\u95EE
+alipay.return.url =${ali.return.url}
+#\u7B7E\u540D\u65B9\u5F0F
+alipay.sign.type =${ali.sign.type}
+#\u5B57\u7B26\u7F16\u7801\u683C\u5F0F
+alipay.charset =${ali.charset}
+#\u652F\u4ED8\u5B9D\u7F51\u5173
+alipay.gateway.url = ${ali.gateway.url}
