--- a/mygo/mygo-web/pom.xml
+++ b/mygo/mygo-web/pom.xml
@@ -21,6 +21,12 @@
     <version>2.5</version>
     <scope>provided</scope>
 </dependency>
+
+<dependency>
+	<groupId>com.alipay</groupId>
+     <artifactId>sdk-java</artifactId>
+	<version>20170324180803</version>
+</dependency>
   </dependencies>
   
   
