--- a/mygo/mygo-manager/src/main/assembly/dev.properties
+++ b/mygo/mygo-manager/src/main/assembly/dev.properties
@@ -2,5 +2,5 @@
 upload.prefix=D:/Program Files (x86)/nginx/shopping
 request.prefix=http://localhost:8088/
 jdbc.url=jdbc:mysql://120.77.65.75:3306/shopping?useUnicode=true&characterEncoding=utf8&autoReconnect=true
-log.path=D:/logs/shopping.log
+log.path=D:/logs/mygo-manager.log
 rootLogger=INFO,Console,File
