--- a/mygo/mygo-manager/src/main/assembly/dev2.properties
+++ b/mygo/mygo-manager/src/main/assembly/dev2.properties
@@ -5,6 +5,6 @@ request.prefix=http://localhost:8088/
 
 jdbc.url=jdbc:mysql://120.77.65.75:3306/shopping?useUnicode=true&characterEncoding=utf8&autoReconnect=true
 
-log.path=D:/logs/shopping.log
+log.path=D:/logs/mygo-manager.log
 
 rootLogger=INFO,Console,File
