--- a/mygo/mygo-manager/src/main/webapp/WEB-INF/web.xml
+++ b/mygo/mygo-manager/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
 	      http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	version="3.0">
-  	<display-name>shopping</display-name>
+  	<display-name>mygo-manager</display-name>
 	<!-- Spring和mybatis的配置文件 -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
