--- a/mygo/mygo-web/pom.xml
+++ b/mygo/mygo-web/pom.xml
@@ -16,17 +16,16 @@
 	  <version>0.0.1-SNAPSHOT</version>
 	</dependency>
 	<dependency>
-    <groupId>javax.servlet</groupId>
-    <artifactId>servlet-api</artifactId>
-    <version>2.5</version>
-    <scope>provided</scope>
-</dependency>
-
-<dependency>
-	<groupId>com.alipay</groupId>
-     <artifactId>sdk-java</artifactId>
-	<version>20170324180803</version>
-</dependency>
+	    <groupId>javax.servlet</groupId>
+	    <artifactId>servlet-api</artifactId>
+	    <version>2.5</version>
+	    <scope>provided</scope>
+	</dependency>
+	<dependency>
+		<groupId>com.mygo</groupId>
+	     <artifactId>mygo-alipay</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</dependency>
   </dependencies>
   
   
