--- a/mygo/mygo-manager/pom.xml
+++ b/mygo/mygo-manager/pom.xml
@@ -10,6 +10,12 @@
   
   
     <dependencies>
+    
+         <dependency>  
+            <groupId>org.quartz-scheduler</groupId>  
+            <artifactId>quartz</artifactId>  
+            <version>1.8.5</version>  
+        </dependency> 
    <dependency>
 	  <groupId>com.mygo</groupId>
 	  <artifactId>mygo-service</artifactId>
