--- a/mygo/mygo-service/pom.xml
+++ b/mygo/mygo-service/pom.xml
@@ -24,6 +24,18 @@
   
   
   	<dependencies>
+  	
+  	
+  		<dependency>  
+            <groupId>org.elasticsearch</groupId>  
+            <artifactId>elasticsearch</artifactId>  
+            <version>2.4.0</version>  
+        </dependency>    
+        <dependency>  
+            <groupId>com.fasterxml.jackson.core</groupId>  
+            <artifactId>jackson-databind</artifactId>  
+            <version>2.1.3</version>  
+ 		</dependency>  
 	    <dependency>
 	      <groupId>junit</groupId>
 	      <artifactId>junit</artifactId>
