--- a/mygo/mygo-manager/pom.xml
+++ b/mygo/mygo-manager/pom.xml
@@ -7,26 +7,30 @@
   </parent>
   <artifactId>mygo-manager</artifactId>
   <packaging>war</packaging>
-  
-  
-    <dependencies>
-    
-         <dependency>  
-            <groupId>org.quartz-scheduler</groupId>  
-            <artifactId>quartz</artifactId>  
-            <version>1.8.5</version>  
-        </dependency> 
+  <dependencies>
+<!-- https://mvnrepository.com/artifact/junit/junit -->
+	<dependency>
+	    <groupId>junit</groupId>
+	    <artifactId>junit</artifactId>
+	    <version>4.11</version>
+	    <scope>test</scope>
+	</dependency>
+      <dependency>  
+         <groupId>org.quartz-scheduler</groupId>  
+         <artifactId>quartz</artifactId>  
+         <version>1.8.5</version>  
+     </dependency> 
    <dependency>
 	  <groupId>com.mygo</groupId>
 	  <artifactId>mygo-service</artifactId>
 	  <version>0.0.1-SNAPSHOT</version>
 	</dependency>
-		<dependency>
-    <groupId>javax.servlet</groupId>
-    <artifactId>servlet-api</artifactId>
-    <version>2.5</version>
-    <scope>provided</scope>
-</dependency>
+	<dependency>
+	    <groupId>javax.servlet</groupId>
+	    <artifactId>servlet-api</artifactId>
+	    <version>2.5</version>
+	    <scope>provided</scope>
+	</dependency>
   </dependencies>
   
   
