--- a/mygo/mygo-manager/src/main/assembly/test.properties
+++ b/mygo/mygo-manager/src/main/assembly/test.properties
@@ -3,7 +3,7 @@ upload.prefix=/data/shopping/img
 
 request.prefix=http://120.77.65.75:8088/
 
-jdbc.url=jdbc:mysql://120.77.65.75:3306/shopping_test?useUnicode=true&characterEncoding=utf8&autoReconnect=true
+jdbc.url=jdbc:mysql://120.77.65.75:3306/shopping_test?useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
 
 log.path=/data/shopping/logs/mygo-manager.log
 
