fix(bug): 增加订单版本号，防止并发请求

--- a/mygo/mygo-web/.project
+++ b/mygo/mygo-web/.project
@@ -3,6 +3,8 @@
 	<name>mygo-web</name>
 	<comment></comment>
 	<projects>
+		<project>mygo-alipay</project>
+		<project>mygo-service</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
