fix(bug): 优化付款和退款逻辑

--- a/mygo/mygo-web/pom.xml
+++ b/mygo/mygo-web/pom.xml
@@ -10,11 +10,11 @@
   <dependencies>
   
   <!-- https://mvnrepository.com/artifact/net.sinofool/alipay-java-sdk -->
-   <dependency>
+<!--    <dependency>
 	  <groupId>com.mygo</groupId>
 	  <artifactId>mygo-service</artifactId>
 	  <version>0.0.1-SNAPSHOT</version>
-	</dependency>
+	</dependency> -->
 	<dependency>
 	    <groupId>javax.servlet</groupId>
 	    <artifactId>servlet-api</artifactId>
