--- a/mygo/mygo-alipay/pom.xml
+++ b/mygo/mygo-alipay/pom.xml
@@ -14,5 +14,10 @@
 	    <artifactId>commons-logging</artifactId>
 	    <version>1.2</version>
 	</dependency>
+	<dependency>
+	  <groupId>com.mygo</groupId>
+	  <artifactId>mygo-service</artifactId>
+	  <version>0.0.1-SNAPSHOT</version>
+	</dependency>
   </dependencies>
 </project>
