--- a/mygo/pom.xml
+++ b/mygo/pom.xml
@@ -10,4 +10,18 @@
   	<module>mygo-service</module>
   	<module>mygo-alipay</module>
   </modules>
+  <build>
+  		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
