--- a/mygo/mygo-service/pom.xml
+++ b/mygo/mygo-service/pom.xml
@@ -25,7 +25,12 @@
   
   	<dependencies>
   	
-  	
+  	<!-- https://mvnrepository.com/artifact/com.alibaba/druid -->
+	<dependency>
+	    <groupId>com.alibaba</groupId>
+	    <artifactId>druid</artifactId>
+	    <version>1.1.0</version>
+	</dependency>
   		<dependency>  
             <groupId>org.elasticsearch</groupId>  
             <artifactId>elasticsearch</artifactId>  
@@ -116,12 +121,6 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.30</version>
-		</dependency>
-		<!-- 导入dbcp的jar包，用来在applicationContext.xml中配置数据库 -->
-		<dependency>
-			<groupId>commons-dbcp</groupId>
-			<artifactId>commons-dbcp</artifactId>
-			<version>1.2.2</version>
 		</dependency>
 		<!-- JSTL标签类 -->
 		<dependency>
