--- a/mygo/mygo-web/src/main/webapp/WEB-INF/web.xml
+++ b/mygo/mygo-web/src/main/webapp/WEB-INF/web.xml
@@ -84,6 +84,11 @@
 	</welcome-file-list>
 	 <error-page>
 	  <error-code>500</error-code>
-	  <location>/common/error.jsp</location>
+	  <location>/common/erro.jsp</location>
+	 </error-page>
+	 
+	 <error-page>
+	  <error-code>404</error-code>
+	  <location>/common/404.jsp</location>
 	 </error-page>
 </web-app>
