--- a/mygo/mygo-manager/src/main/assembly/test.properties
+++ b/mygo/mygo-manager/src/main/assembly/test.properties
@@ -9,4 +9,4 @@ log.path=/data/shopping/logs/mygo-manager.log
 
 rootLogger=INFO,File
 
-goodsdetail.path=http://120.77.65.75:8080/mygo-web/unlogin/goods/goodsDetail.do
+goodsdetail.path=http://mygo-web/unlogin/goods/goodsDetail.do
