--- a/mygo/mygo-manager/src/main/assembly/dev.properties
+++ b/mygo/mygo-manager/src/main/assembly/dev.properties
@@ -1,7 +1,7 @@
 #company
 upload.prefix=D:/Program Files (x86)/nginx/shopping
 request.prefix=http://localhost:8088/
-jdbc.url=jdbc:mysql://120.77.65.75:3306/shopping?useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
+jdbc.url=jdbc:mysql://120.77.65.75:3306/shopping_test?useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
 log.path=D:/logs/mygo-manager.log
 rootLogger=INFO,Console,File
 goodsdetail.path=http://localhost:8080/mygo-web/unlogin/goods/goodsDetail.do
