fix(bug): 修改日志打印

--- a/mygo/mygo-manager/src/main/assembly/dev2.properties
+++ b/mygo/mygo-manager/src/main/assembly/dev2.properties
@@ -3,7 +3,7 @@ upload.prefix=D:/java/tool/nginx-1.8.0/shopping
 
 request.prefix=http://localhost:8088/
 
-jdbc.url=jdbc:mysql://120.77.65.75:3306/shopping?useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
+jdbc.url=jdbc:mysql://mygo-server:3306/shopping?useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
 
 log.path=D:/logs/mygo-manager.log
 
