--- a/mygo/mygo-manager/src/main/assembly/test.properties
+++ b/mygo/mygo-manager/src/main/assembly/test.properties
@@ -1,9 +1,9 @@
 #test
 upload.prefix=/data/shopping/img
 
-request.prefix=http://120.77.65.75:8088/
+request.prefix=http://mygo-img/
 
-jdbc.url=jdbc:mysql://120.77.65.75:3306/shopping_test?useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
+jdbc.url=jdbc:mysql://mygo-server:3306/shopping_test?useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
 
 log.path=/data/shopping/logs/mygo-manager.log
 
