--- a/mygo/mygo-web/src/main/webapp/WEB-INF/web.xml
+++ b/mygo/mygo-web/src/main/webapp/WEB-INF/web.xml
@@ -47,7 +47,7 @@
 	</filter-mapping>
 	<!-- Spring监听器 -->
 	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+		<listener-class>com.cza.web.listener.SpringListener</listener-class>
 	</listener>
 	<!-- 防止Spring内存溢出监听器 -->
 	<listener>
